--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       # Interface for forwarding traffic (Required for "twine.route.*=wireguard-client" to work) 
       - twine.gateway.interface=wg+
       # Expose qbittorrent on WireGuard Client ip address
-      - twine.forward.9080=qbittorrent:9080
+      - twine.forward.80=qbittorrent:80
 
   qbittorrent:
     image: lscr.io/linuxserver/qbittorrent:latest
@@ -49,9 +49,9 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=Etc/UTC
-      - WEBUI_PORT=9080
+      - WEBUI_PORT=80
     ports:
-      - 127.0.0.1:9080:9080
+      - 127.0.0.1:80:80
     labels:
       # Route all outgoing traffic via WireGuard Client
       - twine.route.0.0.0.0/1=wireguard-client
@@ -80,6 +80,7 @@ services:
       - ./config/wireguard-server:/config
       - /lib/modules:/lib/modules
     labels:
+      - twine.gateway.interface=wg+
       # Expose qbittorrent on WireGuard Server ip address
       - twine.forward.80=helloworld
 
