--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,43 +2,54 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+    tags:
+      - "*"
 env:
   IMAGE_NAME: twine
 
 jobs:
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: actuated
     permissions:
       packages: write
       contents: read
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+      - name: Setup mirror
+        uses: self-actuated/hub-mirror@master
+
+      - name: Get TAG
+        id: get_tag
+        run: echo TAG=${GITHUB_REF#refs/tags/} >> $GITHUB_ENV
+
+      - name: Get Repo Owner
+        id: get_repo_owner
+        run: echo "REPO_OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" > $GITHUB_ENV
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       
-      - name: Build image
-        run: |
-          docker build twine --platform linux/amd64 --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
-          docker build twine --platform linux/arm64 --tag $IMAGE_NAME-arm --label "runnumber=${GITHUB_RUN_ID}"
+      - name: Login to container Registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ghcr.io
 
-      - name: Log in to registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
-      - name: Push image
-        run: |
-          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-          [ "$VERSION" == "master" ] && VERSION=latest
-          echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=$VERSION
-          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-          docker tag $IMAGE_NAME-arm $IMAGE_ID:arm-$VERSION
-          docker push $IMAGE_ID:$VERSION
-          docker push $IMAGE_ID:arm-$VERSION
-  
+      - name: Release build
+        id: release_build
+        uses: docker/build-push-action@v4
+        with:
+          outputs: "type=registry,push=true"
+          provenance: false
+          platforms: linux/amd64,linux/arm/v6,linux/arm64
+          tags: |
+            ghcr.io/${{ env.REPO_OWNER }}/$IMAGE_NAME:${{ github.sha }}
+            ghcr.io/${{ env.REPO_OWNER }}/$IMAGE_NAME:${{ env.TAG }}
+            ghcr.io/${{ env.REPO_OWNER }}/$IMAGE_NAME:latest
