--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,9 +18,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup mirror
-        uses: self-actuated/hub-mirror@master
-
       - name: Get TAG
         id: get_tag
         run: echo TAG=${GITHUB_REF#refs/tags/} >> $GITHUB_ENV
@@ -50,6 +47,6 @@ jobs:
           provenance: false
           platforms: linux/amd64,linux/arm/v6,linux/arm64
           tags: |
-            ghcr.io/${{ env.REPO_OWNER }}/$IMAGE_NAME:${{ github.sha }}
-            ghcr.io/${{ env.REPO_OWNER }}/$IMAGE_NAME:${{ env.TAG }}
-            ghcr.io/${{ env.REPO_OWNER }}/$IMAGE_NAME:latest
+            ghcr.io/${{ env.REPO_OWNER }}/${{ IMAGE_NAME }}:${{ github.sha }}
+            ghcr.io/${{ env.REPO_OWNER }}/${{ IMAGE_NAME }}:${{ env.TAG }}
+            ghcr.io/${{ env.REPO_OWNER }}/${{ IMAGE_NAME }}:latest
