--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
 		"tslib": "2.4.1",
 		"typescript": "4.5.4",
 		"@types/node": "16.9.0",
+		"@types/netmask": "2.0.5",
 		"nodemon": "2.0.2"
 	}
 }
