Revert "Enabled arm/v6 builds"
This reverts commit 82c4cd3fc9f2e2a0052ddd041251e609108d28bd.

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -45,8 +45,8 @@ jobs:
         with:
           outputs: "type=registry,push=true"
           provenance: false
-          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
-          context: "./app"
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          context: "./twine"
           tags: |
             ghcr.io/${{ env.REPO_OWNER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
             ghcr.io/${{ env.REPO_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
