--- a/app/package.json
+++ b/app/package.json
@@ -11,19 +11,19 @@
 	"private": true,
 	"license": "UNLICENSE",
 	"dependencies": {
-		"netmask": "2.0.2",
-		"node-docker-api": "1.1.22",
-		"neodoc": "2.0.2",
-		"tmp": "0.2.1",
-		"tar-stream": "3.0.0"
+		"netmask": "^2.0.2",
+		"node-docker-api": "^1.1.22",
+		"neodoc": "^2.0.2",
+		"tmp": "^0.2.3",
+		"tar-stream": "^3.1.7"
 	},
 	"devDependencies": {	
-		"esbuild": "0.17.8",
-		"esbuild-plugin-alias-path": "2.0.2",
-		"tslib": "2.4.1",
-		"typescript": "4.5.4",
-		"@types/node": "16.9.0",
-		"@types/netmask": "2.0.5",
-		"nodemon": "2.0.2"
+		"esbuild": "^0.25.0",
+		"esbuild-plugin-alias-path": "^2.0.2",
+		"tslib": "^2.8.1",
+		"typescript": "^5.7.3",
+		"@types/node": "^18.0.0",
+		"@types/netmask": "^2.0.5",
+		"nodemon": "^3.1.9"
 	}
 }
